<?xml version="1.0"?>
<package>
    <name>orbus_interface</name>
    <version>0.4.1</version>
    <description>This interface connect with all boards with orbus</description>

    <maintainer email="raffaello.bonghi@officinerobotiche.it">Raffaello Bonghi</maintainer>

    <license>MIT</license>


    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <url type="website">http://unav.officinerobotiche.it</url>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <author email="raffaello.bonghi@officinerobotiche.it">Raffaello Bonghi</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>controller_manager</build_depend>
    <build_depend>diagnostic_updater</build_depend>
    <build_depend>diagnostic_msgs</build_depend>
    <build_depend>hardware_interface</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>roslint</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>urdf</build_depend>

    <run_depend>controller_manager</run_depend>
    <run_depend>diagnostic_updater</run_depend>
    <run_depend>diagnostic_msgs</run_depend>
    <run_depend>diagnostic_aggregator</run_depend>
    <run_depend>diff_drive_controller</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>hardware_interface</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>topic_tools</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>

</package>
