<?xml version="1.0"?>
<package>
    <name>orbus_msgs</name>
    <version>0.4.1</version>
    <description>This interface</description>

    <maintainer email="raffaello.bonghi@officinerobotiche.it">Raffaello Bonghi</maintainer>

    <license>MIT</license>

    <url type="bugtracker">https://github.com/officinerobotiche/ros_orbus_interface/issues</url>
    <url type="repository">https://github.com/officinerobotiche/ros_orbus_interface</url>
    <url type="website">http://unav.officinerobotiche.it</url>

    <author email="raffaello.bonghi@officinerobotiche.it">Raffaello Bonghi</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>

</package>
